fix(core/menu): apply menu button bottom spacing only when menu content exists

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -160,10 +160,10 @@ $menu-expanded-width: 16rem;
 
   .menu-buttons {
     margin: 0.75rem 0 0 0.625rem;
-  }
 
-  .menu-buttons > :last-child {
-    margin-bottom: 0.75rem;
+    &:not(:empty) {
+      margin-bottom: 0.75rem;
+    }
   }
 }
 
